# SistemaMonitoramentoDeRede-NOC

./: .gitignore  README.md  app2.js  criar_usuario.py  pyproject.toml  requirements.txt  run.py
Backend/: checker.py  database.py  dependencies.py  main.py  metrics.py  models.py  scheduler.py  schemas.py  security.py  utils.py
Backend/routes/: hosts.py
Frontend/: app.js  index.html  style.css
